@@ -21,4 +21,38 @@ class EnrollmentTest < Test::Unit::TestCase
     assert_equal(@a1, result.first.articles.first)
   end
 
+  def test_1
+    assert_nothing_raised {
+      a3 = Article.new
+      a3.title = 'test_1 title'
+      a3.build_enrollment
+      a3.save
+      
+      a3id = a3.id
+      a3eid = a3.enrollment_id
+
+      e3 = Enrollment.find(a3eid)
+      a3.destroy
+      
+      e3a = Enrollment.find(a3eid)
+    }
+  end
+
+  def test_2
+    assert_nothing_raised {
+      a3 = Article.new
+      a3.title = 'test_1 title'
+      a3.build_enrollment
+      a3.save
+      
+      a3id = a3.id
+      a3eid = a3.enrollment_id
+      
+      e3 = Enrollment.find(a3eid)
+      e3.articles.clear
+      
+      e3a = Enrollment.find(a3eid)
+    }
+  end
+
 end
